--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 		<h2>(I don't know how to use APIs)</h2> -->
 
-		<p> What's the weather like in New York right now?</p>
+		<p> What's the weather like in <input id = "text-box" type='text'/>right now?</p>
+
 
 		<div id = "answer">
 		</div>
