--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>(I don't know how to use APIs)</h2> -->
 
 		<p> What's the weather like in <input id = "text-box" type='text' value="New York"/>right now?</p>
-		<button id="myBtn" onclick="javascript:searchCity()">Button</button>
+		<!-- <button id="myBtn" onclick="javascript:searchCity()">Button</button> -->
 
 
 		<div id = "answer">
